[gd_scene load_steps=58 format=3 uid="uid://bgt31qthkw4yk"]

[ext_resource type="Script" path="res://scences/npc.gd" id="1_8rgkt"]
[ext_resource type="Texture2D" uid="uid://dsbwlo13c85fw" path="res://sprites/Cute_Fantasy_Free/Player/Player.png" id="1_osnb0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0hm5q"]
radius = 11.0454

[sub_resource type="AtlasTexture" id="AtlasTexture_f48ds"]
atlas = ExtResource("1_osnb0")
region = Rect2(0, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ex6f"]
atlas = ExtResource("1_osnb0")
region = Rect2(32, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r6s81"]
atlas = ExtResource("1_osnb0")
region = Rect2(64, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_q6usm"]
atlas = ExtResource("1_osnb0")
region = Rect2(96, 256, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjc34"]
atlas = ExtResource("1_osnb0")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o7l4c"]
atlas = ExtResource("1_osnb0")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gblq2"]
atlas = ExtResource("1_osnb0")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_t3pxk"]
atlas = ExtResource("1_osnb0")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cohrd"]
atlas = ExtResource("1_osnb0")
region = Rect2(128, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xluiu"]
atlas = ExtResource("1_osnb0")
region = Rect2(160, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgons"]
atlas = ExtResource("1_osnb0")
region = Rect2(0, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lx4yu"]
atlas = ExtResource("1_osnb0")
region = Rect2(32, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bmynd"]
atlas = ExtResource("1_osnb0")
region = Rect2(64, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jpa3h"]
atlas = ExtResource("1_osnb0")
region = Rect2(96, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8jly5"]
atlas = ExtResource("1_osnb0")
region = Rect2(128, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_di48q"]
atlas = ExtResource("1_osnb0")
region = Rect2(160, 160, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bnxxy"]
atlas = ExtResource("1_osnb0")
region = Rect2(0, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lap8r"]
atlas = ExtResource("1_osnb0")
region = Rect2(32, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_re0q4"]
atlas = ExtResource("1_osnb0")
region = Rect2(64, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rslfe"]
atlas = ExtResource("1_osnb0")
region = Rect2(96, 288, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wy2sq"]
atlas = ExtResource("1_osnb0")
region = Rect2(0, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7fb0u"]
atlas = ExtResource("1_osnb0")
region = Rect2(32, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j221i"]
atlas = ExtResource("1_osnb0")
region = Rect2(64, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cseho"]
atlas = ExtResource("1_osnb0")
region = Rect2(96, 192, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3k76g"]
atlas = ExtResource("1_osnb0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjw6m"]
atlas = ExtResource("1_osnb0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f2snf"]
atlas = ExtResource("1_osnb0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_163ey"]
atlas = ExtResource("1_osnb0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_17w21"]
atlas = ExtResource("1_osnb0")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_touyw"]
atlas = ExtResource("1_osnb0")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_druov"]
atlas = ExtResource("1_osnb0")
region = Rect2(0, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rr7f"]
atlas = ExtResource("1_osnb0")
region = Rect2(32, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w7ek"]
atlas = ExtResource("1_osnb0")
region = Rect2(64, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tay3u"]
atlas = ExtResource("1_osnb0")
region = Rect2(96, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ms50d"]
atlas = ExtResource("1_osnb0")
region = Rect2(128, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mprhj"]
atlas = ExtResource("1_osnb0")
region = Rect2(160, 96, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_aassc"]
atlas = ExtResource("1_osnb0")
region = Rect2(0, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dokyy"]
atlas = ExtResource("1_osnb0")
region = Rect2(32, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2bw60"]
atlas = ExtResource("1_osnb0")
region = Rect2(64, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyc5j"]
atlas = ExtResource("1_osnb0")
region = Rect2(96, 224, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfbo5"]
atlas = ExtResource("1_osnb0")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qve3e"]
atlas = ExtResource("1_osnb0")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3kvr0"]
atlas = ExtResource("1_osnb0")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_14twt"]
atlas = ExtResource("1_osnb0")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5o40k"]
atlas = ExtResource("1_osnb0")
region = Rect2(128, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u8whh"]
atlas = ExtResource("1_osnb0")
region = Rect2(160, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_35hrm"]
atlas = ExtResource("1_osnb0")
region = Rect2(0, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vg753"]
atlas = ExtResource("1_osnb0")
region = Rect2(32, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jhblj"]
atlas = ExtResource("1_osnb0")
region = Rect2(64, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_envcw"]
atlas = ExtResource("1_osnb0")
region = Rect2(96, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5qcin"]
atlas = ExtResource("1_osnb0")
region = Rect2(128, 128, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7q8le"]
atlas = ExtResource("1_osnb0")
region = Rect2(160, 128, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_hut1d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f48ds")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ex6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r6s81")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q6usm")
}],
"loop": true,
"name": &"back_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjc34")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o7l4c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gblq2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t3pxk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cohrd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xluiu")
}],
"loop": true,
"name": &"back_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jgons")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lx4yu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bmynd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jpa3h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8jly5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_di48q")
}],
"loop": true,
"name": &"back_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bnxxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lap8r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_re0q4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rslfe")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wy2sq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7fb0u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j221i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cseho")
}],
"loop": true,
"name": &"front_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3k76g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjw6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f2snf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_163ey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17w21")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_touyw")
}],
"loop": true,
"name": &"front_idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_druov")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rr7f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w7ek")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tay3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ms50d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mprhj")
}],
"loop": true,
"name": &"front_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aassc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dokyy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2bw60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyc5j")
}],
"loop": true,
"name": &"side_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfbo5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qve3e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3kvr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14twt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5o40k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u8whh")
}],
"loop": true,
"name": &"side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_35hrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vg753")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhblj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_envcw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5qcin")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7q8le")
}],
"loop": true,
"name": &"side_walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rwdyl"]
radius = 35.0

[node name="NPC" type="CharacterBody2D"]
script = ExtResource("1_8rgkt")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_0hm5q")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_hut1d")
animation = &"front_attack"
autoplay = "front_idle"

[node name="detection" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
shape = SubResource("CircleShape2D_rwdyl")

[node name="healthbar" type="ProgressBar" parent="."]
modulate = Color(0, 1, 0, 1)
offset_left = -9.0
offset_top = 11.0
offset_right = 9.0
offset_bottom = 15.0
show_percentage = false

[node name="attack_cooldown" type="Timer" parent="."]
wait_time = 0.5

[node name="take_damage_cooldown" type="Timer" parent="."]

[connection signal="body_entered" from="detection" to="." method="_on_detection_body_entered"]
[connection signal="body_exited" from="detection" to="." method="_on_detection_body_exited"]
